--- a/dasafios/d004/index.html
+++ b/dasafios/d004/index.html
@@ -15,7 +15,7 @@
             var produto = window.prompt('Qual produto você quer comprar?')
             var preço = Number(window.prompt('Qual o valor do produto?'))
             var valor = Number(window.prompt('Qual valor você deu para pagar esse produto?'))
-            var troco = (preço - valor) 
+            var troco = (valor - preço) 
             
 window.alert
 (`Você comprou ${produto} que custou R$ ${preço.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})}. 
