--- a/dasafios/d009/index.html
+++ b/dasafios/d009/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1 class="principal">Rejuste de Salário</h1>
+    <h1 class="principal">Reajuste de Salário</h1>
 
     <button onclick="clicou()">Reajuste Salarial</button>
 
