--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ano Bisexto</title>
+    <title>Ano Bissexto</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <button onclick="clicou()">Verificar</button>
 
         <section id="titulo">
-            <p>Informe um ano para saber se ele é bisexto</p>
+            <p>Informe um ano para saber se ele é bissexto</p>
         </section>
 
         <section id="resposta">
