--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -47,9 +47,9 @@
                 window.document.getElementById('subiu')
                 subiu.innerHTML = `O preço subiu ${resp.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})} em relação ao preço anterior.`
 
-                var porcent = ((anterior - atual) / anterior) * 100
+                var porcent = (((anterior - atual) / anterior) * 100) * (-1)
                 window.document.getElementById('dife')
-                dife.innerHTML = `Uma variação de ${porcent} para cima`
+                dife.innerHTML = `Uma variação de ${porcent.toFixed('2').replace('.',',')}% para cima`
                 
             } 
                 else if (anterior == atual) {
