--- a/exercicios/aula009/ex005.html
+++ b/exercicios/aula009/ex005.html
@@ -24,11 +24,12 @@
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript</p>
     <div>Clique em mim</div>
 
-    <img src="imagens/arvore-do-site.jpg" alt="Imagem da arvore DOM do site">
+    <img src="imagens/arvore-do-site.jpg" alt="Imagem da arvore DOM do site"> <br>
 
     <script>
      
-
+        window.document.write(window.navigator.appName)
+        window.document.write(window.document.URL)
 
     </script>
 </body>
